# PyZettel

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
ai/: index.html
commands/: index.html
configuration/: index.html
create/: index.html
docs/: ai.md  commands.md  configuration.md  create.md  index.md  init.md  list.md  other.md  paper.md  rag.md  rm.md  show.md
init/: index.html
list/: index.html
other/: index.html
paper/: index.html
rag/: index.html
rm/: index.html
search/: search_index.json
show/: index.html
src/pyzettel/: cache.py  config.py  exceptions.py  utils.py  zettel.py
src/pyzettel/citations/: bib_utils.py  crossref.py  doi.py  opencitations.py  semantic_scholar.py  zettel_from_doi.py
src/pyzettel/cli/: cli.py  common_options.py  plugins.py
src/pyzettel/cli/create/: __init__.py  commands.py
src/pyzettel/cli/init/: __init__.py  commands.py
src/pyzettel/cli/list/: __init__.py  commands.py
src/pyzettel/cli/paper/: __init__.py  commands.py
src/pyzettel/cli/rm/: __init__.py  commands.py
src/pyzettel/cli/show/: __init__.py  commands.py
src/pyzettel/dummy_plugin/: __init__.py
src/pyzettel/mkdocs/: tags.py
src/pyzettel/plugins/ai/: __init__.py  conversation.py  embeddings.py  generate_from_title.py  improve_document.py  prompts.py  schema.py  web_scraper.py
src/pyzettel/plugins/ai/create/: commands.py
src/pyzettel/plugins/ai/improve/: __init__.py  commands.py
src/pyzettel/plugins/ai/scrape/: __init__.py  commands.py
src/pyzettel/plugins/ai/search/: __init__.py  commands.py  models.py
src/pyzettel/plugins/ai/tags/: __init__.py  commands.py  models.py  utils.py
src/pyzettel/plugins/google_genai/: __init__.py  embedding.py  llm.py
src/pyzettel/plugins/hello/: __init__.py  commands.py
src/pyzettel/plugins/openai/: __init__.py  embedding.py  llm.py
src/pyzettel/plugins/rag/: __init__.py  ask.py  cli.py  config.py  init_db.py  update.py  zettel_splitter.py
tests/: test_cache.py  test_config.py  test_ebeddings.py  test_id_generator.py  test_mkdocs.py  test_opencitations.py  test_rag_initdb.py  test_semantic_scolar.py  test_web_scraper.py  test_zettel.py  test_zettel_from_doi.py  test_zettel_index.py
tests/assets/: 019543577ce8.md
